# taxaiagent

./: .env.example  .gitignore  README.md  app.py  config.py  generate_ppt.py  presentation.html  presentation_v3.html  pyproject.toml  시나브로_세법개정_AI어시스턴트.pptx
core/: amendment_agent.py  buchik_precedents.py  citation_parser.py  cross_ref_checker.py  hwpx_writer.py  law_api.py  law_network.py
data/: buchik_precedents.json
docs/: architecture.md  citation-parsing.md  manual-test-scenarios.md  parallel-law-detection.md  법령검색목록_법령.csv  법령한글주소사용방법.md
templates/buchik/: future_effect.txt  genuine_retroactive.txt  imperfect_retroactive.txt
ui/: stage1_draft.py  stage2_crossref.py  stage3_output.py  styles.py
