[project]
name = "mofe-2nd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
    "openai>=2.37.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-hwpx>=2.9.1",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
